<package>

  <name>lslidar_n301</name>
  <version>1.2.0</version>
  <description>
    Basic ROS support for the Leishen N301 LIDARs.
  </description>
  <maintainer email="yutongyan@lslidar.com">yutongyan</maintainer>
  <author>yutongyan</author>
  <license>Licensed under the Apache License, Version 2.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lslidar_n301_driver</run_depend>
  <run_depend>lslidar_n301_msgs</run_depend>
  <run_depend>lslidar_n301_decoder</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
