<?xml version="1.0"?>
<package format="2">

  <name>lslidar_n301_decoder</name>
  <version>1.2.0</version>
  <description>
    Point cloud conversions for Leishen N301 LIDARs.
  </description>

  <maintainer email="yutongyan@lslidar.com">yutongyan</maintainer>
  <author>yutongyan</author>
  <license>Licensed under the Apache License, Version 2.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>

  <depend>lslidar_n301_msgs</depend>

</package>
