<package>

  <name>lslidar_n301_driver</name>
  <version>1.2.0</version>
  <description>
    ROS device driver for Leishen N301 lidar.
  </description>

  <maintainer email="yutongyan@lslidar.com">yutongyan</maintainer>
  <author>yutongyan</author>
  <license>Licensed under the Apache License, Version 2.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lslidar_n301_msgs</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>lslidar_n301_msgs</run_depend>


</package>
